--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -6,11 +6,15 @@
     <title>Teste de imagem de fundo</title>
     <style>
         body {
-            height: 100vh;
+            /*
+            height: 100vh
             background-color: blueviolet;
             background-image: url('fotos/party-zoom-background-bir17s1dk2oovdtw.jpg');
             background-position: center;
             background-size: cover;
+            background-attachment: fixed;
+          */
+            background: blueviolet url('fotos/party-zoom-background-bir17s1dk2oovdtw.jpg') center fixed
 
         }
         main {
@@ -21,6 +25,10 @@
             border-radius: 10px;
             border: 1px solid black;
             margin: auto;
+            
+        }
+        main > h1 {
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Tahoma, Geneva, Verdana, sans-serif;
         }
 
         main > p {
