--- a/desafios/desafio012/index.html
+++ b/desafios/desafio012/index.html
@@ -25,7 +25,7 @@
             <p>Nem sempre o amor ganha. Às vezes você terá que abrir mão dele pra continuar.<br> Às vezes é o outro quem irá embora.<br> Não por egoísmo ou intuição, mas por força.<br>É preciso força para abandonar coisas, roupas que não servem mais, pessoas que a gente ama muito.<br> É com muita força também que você segue em frente.<br> E encontra outros motivos para viver.<br> Porque força e coragem dependem de você.<br></p>
         </section>
 
-        <section class="efeitofundo">
+        <section class="efeitofundo" id="img001">
             <p>Vou te levar comigo numa bagagem que ninguém rouba.<br> 
                Que aeroporto nenhum extravia.<br>
                Que mundo nenhum me toma:<br>
