--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -31,6 +31,12 @@
         }
         thead {
             color: rgb(105, 76, 82);
+            background-color: #facae6;
+        }
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color:#facae6;
         }
         tfoot {
             background-color: darkgrey;
