--- a/desafios/desafio014/tabela desafio14.html
+++ b/desafios/desafio014/tabela desafio14.html
@@ -37,12 +37,17 @@
         <thead> 
         <th rowspan="2" class="titulocor" scope="col">Área</th>
         <th rowspan="2" class="titulocor" scope="col">Disciplina</th>
-        <th colspan="2" class="titulocor" scope="col">Notas</th>
-        <tr></tr>
+        </tr>
+        <tr>
+        <th colspan="2" class="titulocor" scope="colgroup">Notas</th>
+        <th rowspan="2" class="titulocor" scope="col">Média</th>
+         </tr>
+         <tr>
+        
         <th class="titulocor" scope="col">Nota 1</th>
         <th class="titulocor" scope="col">Nota 2</th>
-        <th rowspan="2" class="titulocor" scope="col">Média</th>
         </tr>
+        
         </thead>
     <tbody>
         <tr>
