--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframes</title>
+    <style>
+
+        iframe {
+            border: 1px solid black;
+
+        }
+        iframe {
+            border: 1px solid black;
+            display: block;
+            margin: auto;
+        }
+        p {
+            text-align:justify;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de iframe</h1>
-    <p>Acessando o site do <iframe src="https://cursoemvideo.com" frameborder="0"></iframe> para aprender a programar</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi dolorem dolores amet officiis iste maiores laudantium quis debitis nostrum ipsam, incidunt earum, nemo reprehenderit, pariatur accusantium molestias illum! Qui, expedita.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, laborum tempore, pariatur facere autem obcaecati eius dolore, vero inventore cumque illo ullam commodi quis modi placeat suscipit molestiae assumenda quas!
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae molestiae omnis sapiente quos excepturi maiores error impedit assumenda porro minus! Quibusdam commodi deserunt placeat molestiae iusto, dolorum vitae blanditiis ab.</p>
+ <iframe src="paginas extras/page001.html" frameborder="0"></iframe>
 </body>
 </html>
