--- a/exercicios/ex024/paginas extras/page002.html
+++ b/exercicios/ex024/paginas extras/page002.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uso</title>
+    <title>Uso de iframes</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            color: darkslategrey;
+        }
+
+        h1 {
+            color: gray;
+        }
+        iframe {
+            border: 2px solid rgb(158, 18, 100);
+        }
+        iframe#tela {
+            height: 200px;
+            width: 800px;
+        }
+    </style>
 </head>
 <body>
+    <h1>Faça uma escolha</h1>
+    <p> 
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus veritatis, eaque, debitis reiciendis voluptatem cupiditate iure minus asperiores, dolor aspernatur doloremque illo nobis quae adipisci perspiciatis mollitia perferendis officiis magnam!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nam animi odio corporis ea facere aut assumenda officiis ex delectus numquam, quae quod eveniet, omnis ipsum ratione. Facilis, possimus minima.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti deleniti ab eos harum provident reprehenderit illo in rerum, adipisci nihil itaque aut eveniet, officia nobis, ea eligendi repudiandae. Officia, nemo.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga quos, quaerat ducimus sit natus illo est? Cupiditate nam expedita minus deleniti, nulla provident saepe facere dolorem ex eaque, commodi nesciunt.
+        </p>
+        <ul>
+            <li><a href="page001.html" target="frame">Primeira Página</a>
+            <li><a href="http://">Segunda Página</a></li>
+            <li><a href="http://">Terceira Página</a></li>
+        </ul>
+        <iframe id="tela" name="frame" srcdoc="<h1> Escolha uma das opções</h1><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta ratione architecto quisquam. Quibusdam, nobis? Atque, sequi itaque eum tempora quisquam id ipsum nemo, at unde aut vitae temporibus, reiciendis iste </p><img src='imagens/Cabeçalho.png'>">
+        <p>Infelizmente seu navegador não é compatível com isso.</p>
+        </iframe>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta ratione architecto quisquam. Quibusdam, nobis? Atque, sequi itaque eum tempora quisquam id ipsum nemo, at unde aut vitae temporibus, reiciendis iste.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ut nemo quo nihil reprehenderit. Dolores obcaecati velit quam voluptas iste optio sit? Architecto, deserunt perferendis. Laboriosam repellat unde nihil ex.
+        </p>
     
 </body>
 </html>
